--- a/src/styles.css
+++ b/src/styles.css
@@ -1,29 +1,67 @@
+html, body {
+  background-color: #f5f5f5;
+  color: #191919;
+  padding: 0;
+  margin: 0;
+}
+
+* {
+  box-sizing: content-box;
+}
+
+h1 { 
+  font-size: 24px;
+}
+
 .App {
   font-family: sans-serif;
   font-size: 20px;
-  text-align: center;
+  text-align: left;
+
 }
-.row {
+form {
+  margin: 20px 0;
   display: flex;
   flex-direction: row;
-  align-items: center;
-  margin: 10px auto;
+  justify-content: space-around;
+}
+
+p {
+padding: 20px;
+margin: 0;
+}
+
+p:nth-child(even) {
+  background-color: #ececec;
+  
+}
+
+.pattern {
+  padding: 0 20px;
+  overflow: auto;
+  border-top: 1px solid #bbb;
+  
 }
 
 label {
-  display: inline-block;
-  text-align: right;
-  width: calc(50% - 10px);
+  display: block;
+  text-align: left;
   margin-right: 10px;
+  margin-bottom: 5px;
+  font-weight: bold;
 }
-input {
-  width: 100px;
+input, select, option {
+  
   padding: 5px;
   font-size: 20px;
 }
 
-button {
-  padding: 5px 10px;
-  font-size: 20px;
-  margin: 20px auto;
+input {
+  width: 100px;
 }
+
+button {
+  padding: 0 20px;
+  font-size: 20px;
+}
+
